@startuml
class CsvAmortizationScheduleWriter {
    + WriteAmortizationSchedule(principal:MortgagePrincipal, term:MortgageTerm, rate:decimal) : void
}
class MortgageParser {
    + {static} <<readonly>> ARGS_COUNT : int = 3
    + Rate : decimal <<get>>
    + MortgageParser(args:string[])
}
MortgageParser --> "Principal" MortgagePrincipal
MortgageParser --> "Term" MortgageTerm
class MortgageCalculator {
    + {static} CalculateMonthlyPayment(principal:MortgagePrincipal, term:MortgageTerm, rate:decimal) : decimal
    + {static} CalculateTotalCost(principal:MortgagePrincipal, term:MortgageTerm, rate:decimal) : decimal
    + {static} CalculateAmortizationSchedule(principal:MortgagePrincipal, term:MortgageTerm, rate:decimal) : IEnumerable<(int month, decimal principalPaid, decimal remainingPrincipal)>
}
class MortgageTerm {
    + Value : int <<get>>
    + MortgageTerm(termInMonths:int)
}
class MortgagePrincipal {
    + Value : decimal <<get>>
    + MortgagePrincipal(principal:decimal)
}
@enduml
